Changed links to https.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h1 id="title">pappu pakia</h1>
       <h3 id="credits">
         by
-        <a href="http://twitter.com/SolitaryDesigns">Kushagra</a>
+        <a href="https://twitter.com/SolitaryDesigns">Kushagra</a>
         and
-        <a href="http://twitter.com/_rishabhp">Rishabh</a>
+        <a href="https://twitter.com/_rishabhp">Rishabh</a>
       </h3>
       <h3 id="last_score"></h3>
       <h3 id="high_score"></h3>
@@ -92,8 +92,8 @@
 
     <h3>Credits</h3>
     <p>
-      Handsomely coded by <a href="http://twitter.com/_rishabhp">Rishabh</a>.
-      Beautiful graphics by <a href="http://twitter.com/solitarydesigns">Kushagra</a>. We're freelance web dudes.
+      Handsomely coded by <a href="https://twitter.com/_rishabhp">Rishabh</a>.
+      Beautiful graphics by <a href="https://twitter.com/solitarydesigns">Kushagra</a>. We're freelance web dudes.
     </p>
 
     <p>
